--- a/public/test/Document2.html
+++ b/public/test/Document2.html
@@ -45,7 +45,7 @@
                     </div>
                 </a></div>
                 <div class="flex items-center text-base leading-5">
-                    <div class="hidden sm:block"><a class="p-1 font-medium text-gray-900 dark:text-gray-100 sm:p-4" href="http://heatmap-test.test/blog">Blog</a><a class="p-1 font-medium text-gray-900 dark:text-gray-100 sm:p-4" href="http://heatmap-test.test/tags">Tags</a><a class="p-1 font-medium text-gray-900 dark:text-gray-100 sm:p-4" href="http://heatmap-test.test/projects">Projects</a><a class="p-1 font-medium text-gray-900 dark:text-gray-100 sm:p-4" href="http://heatmap-test.test/about">About</a>
+                    <div class="hidden sm:block"><a class="p-1 font-medium text-gray-900 dark:text-gray-100 sm:p-4" href="/test/Document.html">Home</a><a class="p-1 font-medium text-gray-900 dark:text-gray-100 sm:p-4" href="http://heatmap-test.test/tags">Tags</a><a class="p-1 font-medium text-gray-900 dark:text-gray-100 sm:p-4" href="http://heatmap-test.test/projects">Projects</a><a class="p-1 font-medium text-gray-900 dark:text-gray-100 sm:p-4" href="http://heatmap-test.test/about">About</a>
                     </div>
                     <button aria-label="Toggle Dark Mode" type="button" class="ml-1 mr-1 h-8 w-8 rounded p-1 sm:ml-4">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="text-gray-900 dark:text-gray-100">
