--- a/public/test/Document.html
+++ b/public/test/Document.html
@@ -11,7 +11,7 @@
     <script src="./Document_files/saved_resource"></script>
     <!--    <script src="./Document_files/heatmap.js"></script>-->
     <script src="./Document_files/axios@latest"></script>
-    <script src="http://heatmap.test/heatmap.js"></script>
+    <script src="http://heatmap.test/hash/heatmap.js"></script>
 
     <script src="./Document_files/standalone.min.js"></script>
     <script>
